--- a/Audyt innowacyjności/Result.xaml
+++ b/Audyt innowacyjności/Result.xaml
@@ -15,64 +15,63 @@
 
         </ScrollViewer> -->
 
-        <ScrollViewer Margin="84,0,0,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5">
-            <Grid Margin="0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5">
-                <TextBlock x:Name="Title" Text="Statystyki" Margin="0,0,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Center" RenderTransformOrigin="0.5,0.5" FontSize="16" />
-                <TextBlock Text="NazwaPrzedsiebiorstwa: " Margin="0,15,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" />
+        <ScrollViewer Margin="84,0,0,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750">
+            <Grid Margin="0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750">
+                <TextBlock Text="NazwaPrzedsiebiorstwa: " Margin="0,15,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750" />
                 <TextBlock Text="{Binding NazwaPrzedsiebiorstwa}" Margin="0,30,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" />
                 <TextBlock Text="Branza: " Margin="0,45,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
                 <TextBlock Text="{Binding Branza}" Margin="0,60,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="NumerRegon: " Margin="0,75,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="NumerRegon: " Margin="0,75,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding NumerRegon}" Margin="0,90,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="NumerKRS: " Margin="0,105,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="NumerKRS: " Margin="0,105,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding NumerKRS}" Margin="0,120,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" />
                 <TextBlock Text="Miasto: " Margin="0,135,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
                 <TextBlock Text="{Binding Miasto}" Margin="0,150,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="WiekPrzedsiebiorstwa : " Margin="0,165,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="WiekPrzedsiebiorstwa : " Margin="0,165,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding WiekPrzedsiebiorstwa}" Margin="0,180,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="IloscPracownikow: " Margin="0,195,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="IloscPracownikow: " Margin="0,195,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding IloscPracownikow}" Margin="0,210,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="PoziomWyksztalcenia: " Margin="0,225,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="PoziomWyksztalcenia: " Margin="0,225,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding PoziomWyksztalcenia}" Margin="0,240,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="StazPracy: " Margin="0,255,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="StazPracy: " Margin="0,255,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding StazPracy}" Margin="0,270,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="WiekZatrudnienia: " Margin="0,285,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="WiekZatrudnienia: " Margin="0,285,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding WiekZatrudnienia}" Margin="0,300,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="Obroty: " Margin="0,315,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="Obroty: " Margin="0,315,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding Obroty}" Margin="0,330,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
                 <TextBlock Text="Zysk: " Margin="0,345,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
                 <TextBlock Text="{Binding Zysk}" Margin="0,360,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="AktywaNiematerialne : " Margin="0,375,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="AktywaNiematerialne : " Margin="0,375,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding AktywaNiematerialne}" Margin="0,390,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="AktywaMaterialne : " Margin="0,405,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="AktywaMaterialne : " Margin="0,405,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding AktywaMaterialne}" Margin="0,420,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="AktywaPrawne : " Margin="0,435,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="AktywaPrawne : " Margin="0,435,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding AktywaPrawne}" Margin="0,450,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="ZasiegDzialanosci : " Margin="0,465,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="ZasiegDzialanosci : " Margin="0,465,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding ZasiegDzialanosci}" Margin="0,480,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="SzczebleHierarchiPionowej : " Margin="0,495,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="SzczebleHierarchiPionowej : " Margin="0,495,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding SzczebleHierarchiPionowej}" Margin="0,510,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="KoordynacjaPracy : " Margin="0,525,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="KoordynacjaPracy : " Margin="0,525,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding KoordynacjaPracy}" Margin="0,540,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="KoordynacjaPracyKomentarz : " Margin="0,555,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="KoordynacjaPracyKomentarz : " Margin="0,555,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding KoordynacjaPracyKomentarz}" Margin="0,570,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="PracaZespolowa : " Margin="0,585,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="PracaZespolowa : " Margin="0,585,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding PracaZespolowa}" Margin="0,600,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="WsparcieInnowacji : " Margin="0,615,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="WsparcieInnowacji : " Margin="0,615,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding WsparcieInnowacji}" Margin="0,630,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="Innowacyjnosc : " Margin="0,645,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="Innowacyjnosc : " Margin="0,645,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding Innowacyjnosc}" Margin="0,660,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="ZwiazkiFirmy : " Margin="0,675,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="ZwiazkiFirmy : " Margin="0,675,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding ZwiazkiFirmy}" Margin="0,690,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="StosunkiZAgencjami : " Margin="0,705,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="StosunkiZAgencjami : " Margin="0,705,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding StosunkiZAgencjami}" Margin="0,720,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="StosunkiZInstytucjami : " Margin="0,735,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="StosunkiZInstytucjami : " Margin="0,735,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding StosunkiZInstytucjami}" Margin="0,750,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="ProcesoweLiczba : " Margin="0,765,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="ProcesoweLiczba : " Margin="0,765,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding ProcesoweLiczba}" Margin="0,780,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="ProcesoweKomentarz : " Margin="0,795,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="ProcesoweKomentarz : " Margin="0,795,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding ProcesoweKomentarz}" Margin="0,810,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
-                <TextBlock Text="ProduktoweLiczba : " Margin="0,825,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
+                <TextBlock Text="ProduktoweLiczba : " Margin="0,825,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="750"/>
                 <TextBlock Text="{Binding ProduktoweLiczba}" Margin="0,840,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
                 <TextBlock Text="ProduktoweKomentarz : " Margin="0,855,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
                 <TextBlock Text="{Binding ProduktoweKomentarz}" Margin="0,870,-16.8,0" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5"/>
@@ -212,7 +211,7 @@
             </Grid>
         </ScrollViewer>
 
-        <Button Content="Cofnij" HorizontalAlignment="Left" Height="36" Margin="361,764,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
+        <Button Content="Cofnij" HorizontalAlignment="Left" Height="36" Margin="667,764,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
 
     </Grid>
 
